--- a/latihan6.html
+++ b/latihan6.html
@@ -1,1 +1,35 @@
 
+<html>
+    <head>
+        <title>jadwal pelajaran</title>
+    </head>
+    <body>
+        <p>ini adalah jadwal pelajaran saya</p>
+        <table border="1">
+            <th>jadwal pelajaran</th>
+            <th>hari</th>
+            <th>jam</th>
+            <tr>
+                <td>Sysadmin</td>
+                <td>senin</td>
+                <td>07.45-10.45</td>
+            </tr>
+            <tr>
+                <td>cs dan pkwu</td>
+                <td>selasa</td>
+                <td>07.00-14.15</td>
+            </tr>
+            <tr>
+                <td>net dan pweb</td>
+                <td>rabu</td>
+                <td>07.00-14-55</td>
+            </tr>
+            <tr>
+                <td>infra</td>
+                <td>kamis</td>
+                <td>11.45-14.55</td>
+            </tr>
+
+        </table>
+    </body>
+</html>
