--- a/latihan5.html
+++ b/latihan5.html
@@ -1,1 +1,47 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Latihan List</title>
+</head>
+<body>
+
+<h3 align:center>Kelas Industri dan Jurusan di SMKN 1 Nglegok</h3>
+
+<p>Di SMKN 1 Nglegok, terdapat berbagai jurusan yang menawarkan beragam program pendidikan. Berikut adalah daftar jurusan yang ada:</p>
+
+<ol>
+  <li>TKJ</li>
+  <li>TBSM</li>
+  <li>TKRO</li>
+  <li>TB</li>
+  <li>TEI</li>
+  <li>BDPM</li>
+  <li>AKL</li>
+</ol>
+
+<p>Beberapa jurusan di SMKN 1 Nglegok menawarkan kelas industri yang memungkinkan siswa untuk 
+    mendapatkan pengalaman praktis dan kerjasama dengan perusahaan. Berikut adalah beberapa 
+    kelas industri yang ditawarkan oleh sekolah:
+
+ <ol>
+    <il>A.TKJ</il> 
+    <ul>
+      <li>Mikrotik Academy</li>
+      <dd>Program kerjasama <i>Networking</i> dengan Mikrotik Latvia</dd>
+      <li>Redhat Academy</li>
+      <dd>Program kerjasama <i>Sysadmin</i> dengan Red Hat USA</dd>
+      <li>AWS Academy</li>
+      <dd> Program kerjasama <i>Cloud Computing</i> dengan AWS USA</dd>
+    </ul>
+ </ol>
+ <ol>
+    <il>B.TBSM</il> 
+    <ul>
+      <li>Kelas Honda</li>
+      <dd>Program kerjasama sepeda motor dengan Honda Jepang</dd>
+    </ul>
+ </ol>  
+</p>
+</body>
+</html>
 
