--- a/latihan5.html
+++ b/latihan5.html
@@ -3,7 +3,7 @@
 <head>
 <title>Latihan List</title>
 </head>
-<body>
+<body bgcolor="pink">
 
 <h3 align:center>Kelas Industri dan Jurusan di SMKN 1 Nglegok</h3>
 
